<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="ST_STATION_CTRL" Id="{ac0cc6f0-0211-4ad8-b9e3-38d841d661d7}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_STATION_CTRL :
STRUCT
  Cmd             : E_STATION_CTRL;
  {attribute 'displaymode':='bin'}
  nMask           : BYTE;           // nest mask for sending mover to next station
  nTargetStation  : USINT;          // where to next?
  rOffset         : REAL;           // optional offset for mover in target station when leaving sending station; 
                                    // use case: position correction of workpiece on wpc by vision
END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>