<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="ST_STATION_GEAR_PARAMETER" Id="{bedd6c5b-8ebf-4cb2-834c-807d01f67c1a}">
    <Declaration><![CDATA[TYPE ST_STATION_GEAR_PARAMETER :
STRUCT
  eDistance   : E_STATION_GEAR_DISTANCE_AXIS;
  rDistance   : LREAL := 100.0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>